Prevent overflow on status text

--- a/Valour/Client/Components/Users/UserInfoComponent.razor.css
+++ b/Valour/Client/Components/Users/UserInfoComponent.razor.css
@@ -117,4 +117,5 @@
     font-size: 12px;
     color: #7A7A7A;
     margin: 0;
+    overflow: hidden;
 }
